--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,20 @@
     tools:context=".MainActivity">
 
     <!-- Incluindo o widget SmartTabLayout (são as nossas abas) no layout.
+     Lá também têm a definição de todos os atributos abaixo.
      Link: https://github.com/ogaclejapan/SmartTabLayout/ -->
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         android:id="@+id/viewPagerTab"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:background="@color/colorPrimary"
         app:stl_indicatorAlwaysInCenter="false"
         app:stl_indicatorWithoutPadding="false"
         app:stl_indicatorInFront="false"
         app:stl_indicatorInterpolation="smart"
         app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="#40C4FF"
+        app:stl_indicatorColor="@android:color/white"
         app:stl_indicatorThickness="4dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorCornerRadius="2dp"
@@ -27,15 +29,15 @@
         app:stl_overlineThickness="0dp"
         app:stl_underlineColor="#4D000000"
         app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#4D000000"
+        app:stl_dividerColor="@color/colorPrimary"
         app:stl_dividerThickness="1dp"
         app:stl_defaultTabBackground="?attr/selectableItemBackground"
         app:stl_defaultTabTextAllCaps="true"
-        app:stl_defaultTabTextColor="#FC000000"
-        app:stl_defaultTabTextSize="12sp"
+        app:stl_defaultTabTextColor="#FCFCF9F9"
+        app:stl_defaultTabTextSize="14sp"
         app:stl_defaultTabTextHorizontalPadding="16dp"
         app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_distributeEvenly="false"
+        app:stl_distributeEvenly="true"
         app:stl_clickable="true"
         app:stl_titleOffset="24dp"
         app:stl_drawDecorationAfterTab="false"
